--- a/requirements.txt
+++ b/requirements.txt
@@ -33,4 +33,5 @@ rasa_core~=0.12.0
 pymongo==3.5.1
 python-dateutil==2.7.3
 spacy==2.0.12
-sklearn_crfuite==0.3.6
+scikit-learn==0.20.1
+sklearn_crfuite==0.3
