--- a/requirements.txt
+++ b/requirements.txt
@@ -32,5 +32,6 @@ rasa_core_sdk~=0.11.0
 rasa_core~=0.12.0
 pymongo==3.5.1
 python-dateutil==2.7.3
-spacy==2.0.12
+spacy>=2.0.0,<3.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.0.0/en_core_web_sm-2.0.0.tar.gz#en_core_web_sm
 sklearn_crfsuite==0.3.6
